src/unit_tests/TypeChecker/fail/attr-err.cl
class Main {
    x : String;
    main() : Int {
        {
            x <- 5;
            1;
        }
    };
};